# todo

./: BACKEND_STRUCTURE_ASSESSMENT.md  FUNCTION_INVOCATION_ERROR_RESOLUTION.md  GITHUB_VERCEL_TROUBLESHOOTING.md  VERCEL_ERROR_RESOLUTION.md  pyproject.toml  vercel.json  verify_deployment.sh
.claude/: settings.local.json
.github/workflows/: deploy.yml  nextjs.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: .env.example  .gitignore  VERCEL_DEPLOYMENT_GUIDE.md  api_handler.py  database.py  main.py  test_vercel_deployment.py
frontend/: .env.production  next.config.js
frontend/src/app/api/[...path]/: route.ts
history/prompts/1-cli-todo-app/: 1-create-cli-todo-spec.spec.prompt.md  2-create-cli-todo-plan.plan.prompt.md  3-create-todo-tasks.tasks.prompt.md  4-implement-todo-app.red.prompt.md
history/prompts/constitution/: 1-update-project-constitution.constitution.prompt.md
specs/1-cli-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-cli-todo-app/checklists/: requirements.md
specs/1-cli-todo-app/contracts/: task-api.md
todo_console/: .gitignore  README.md  main.py  utils.py
todo_console/tests/: test_todo.py
