[project]
name = "todo-console"
version = "0.1.0"
description = "A console-based todo application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["todo_console"]
